app/styles/components/_nav-underlines.scss
.nav-underlines{
  background: #FFFFFF;
  >li{
    display: inline-block;
    >a{
      color: #333333;
      padding: 20px 30px;
      &:hover, &:active, &:focus{
        color: #1c87d9;
        background: #FFFFFF;
      }
    }
    &.active{
      a{
        color: #1c87d9;
      }
      &:after{
        content: '';
        position: absolute;
        bottom: -1px;
        width: 100%;
        height: 3px;
        background-color: #1c87d9;
        display: block;
        left: 0;
      }
    }
  }
}

